--- a/numberplace/Cargo.toml
+++ b/numberplace/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Tomo-Horiuchi <horiuchi.github@gmail.com>"]
 edition = "2018"
 
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
@@ -32,3 +33,5 @@ wasm-bindgen-test = "0.3.13"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
